--- a/index.html
+++ b/index.html
@@ -1268,7 +1268,7 @@
 
     <div class="container-fluid mt-5 " id="article3 ">
         <div class="container-lg article">
-            <h4 class="article-heading ">Trovate il miglior antivirus </h4>
+            <h4 class="article-heading ">Il giusto prezzo </h4>
             <div class="article3-content">
                 <img class="img-fluid article3-image" src="assets/allImages/article3.jpg ">
                 <p class="article3-paragraph1">
