--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 </head>
 
 <body class="grey lighten-4">
-
     <nav class="navbar navbar-light navbar-expand-lg bg-light">
         <div class="navbar-inner container-lg">
             <a class="navbar-brand" href="index.html">
@@ -31,23 +30,23 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
+                        <a class="nav-link" href="https://www.antivirusguide.com/it/confronta/?lp=default" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
                             Confronta
                         </a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                        <a class="nav-link" href="https://www.antivirusguide.com/it/informatica-privacy/?lp=default" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                                 Informatica Sulla Privacy
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href=" # ">
+                        <a class="nav-link" href="https://www.antivirusguide.com/it/avviso-legale/?lp=default">
                                Note legali
-                            </a>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contatto</a>
+                        <a class="nav-link" href="https://www.antivirusguide.com/it/contatto/?lp=default">Contatto</a>
                     </li>
                 </ul>
             </div>
@@ -60,7 +59,7 @@
         <div class="container-lg hero-wrapper">
 
             <div class="hero-content-1">
-                <h1 class="h1-responsive font-weight-bold mb-0">Milgior antivirus 2020</h1>
+                <h1 class="h1-responsive font-weight-bold mb-0">Miglior antivirus 2020</h1>
             </div>
             <div class="hero-content-2">
                 <h5 class="h5-responsive font-weight-bold">Confronta le migliori soluzioni antivirus per i tuoi dispositivi</h5>
@@ -79,6 +78,7 @@
     <!--Hero-Grid Ends-->
 
     <!--Product Card - 1  Start-->
+
     <div class="grid-wrapper container-lg ">
         <div class="product-number d-flex gold-arrow-div">
             <span class="gold-arrow">#1 MIGLIORE ANTIVIRUS</span>
@@ -110,7 +110,7 @@
                     <span>Compatibilita : <i class="fab fa-apple "> </i><span class="ios ">iOS</span> <i class="fab fa-windows "> </i> <i class="fab fa-android "></i></span>
                 </div>
                 <div class="product-details-garantee ">
-                    <span class="red-text "><i class="fas fa-certificate "></i>
+                    <span class="red-text"><i class="fas fa-certificate"></i>
                         Garanzia soddisfatti o rimborsati 60 giorni
                     </span>
                 </div>
@@ -156,8 +156,8 @@
 
         <div class="product-cta">
             <p><strong>MIGLIORE ANTIVIRUS</strong></p>
-            <a href="https://bitdefender.f9tmep.net/c/1246806/776432/4466?subId1=&amp;sharedid=SID_35_8a3466b25008c40de62e686a68e4b484_tl_1&amp;subId2=listbtn&amp;subId3=visit" data-idimp="664b47a990ab74ac42650f77ba706022" class="red-custom-button" event_category="landing_page"
-                event_action="visit_site" event_label="bitdefender" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true" title="" data-original-title="<div class='white-text '> Offerta speciale AntivirusGuide<br><b>60% </b> Sconto</div>">	Visita Bitdefender <i class="fas fa-angle-right ml-2"></i></a>
+            <a href="https://bitdefender.f9tmep.net/c/1246806/776432/4466?subId1=&amp;sharedid=SID_35_8a3466b25008c40de62e686a68e4b484_tl_1&amp;subId2=listbtn&amp;subId3=visit" data-idimp="664b47a990ab74ac42650f77ba706022" class="red-custom-button stretched-link"
+                event_category="landing_page" event_action="visit_site" event_label="bitdefender" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true" title="" data-original-title="<div class='white-text '> Offerta speciale AntivirusGuide<br><b>60% </b> Sconto</div>">	Visita Bitdefender <i class="fas fa-angle-right ml-2"></i></a>
         </div>
 
         <div class="product-btn">
@@ -165,6 +165,7 @@
                 event_label="bitdefender" class="btn btn-lg informacioni-btn" target="_blank">Informazioni dettagliate <i class="fas fa-angle-right ml-2"></i></a>
         </div>
     </div>
+
     <!--Product Card Ends-->
 
     <!--Product Card - 2 Start-->
@@ -235,8 +236,8 @@
 
         <div class="product-cta">
             <p><strong>ECCELENTE</strong></p>
-            <a href="http://www.norton.com" data-idimp="664b47a990ab74ac42650f77ba706022" class="red-custom-button" event_category="landing_page" event_action="visit_site" event_label="bitdefender" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true"
-                title="" data-original-title="<div class='white-text '> Offerta speciale AntivirusGuide<br><b>60% </b> Sconto</div>">	Visita Norton <i class="fas fa-angle-right ml-2"></i></a>
+            <a href="http://www.norton.com" data-idimp="664b47a990ab74ac42650f77ba706022" class="red-custom-button stretched-link" event_category="landing_page" event_action="visit_site" event_label="bitdefender" target="_blank" data-toggle="tooltip" data-placement="top"
+                data-html="true" title="" data-original-title="<div class='white-text '> Offerta speciale AntivirusGuide<br><b>60% </b> Sconto</div>">	Visita Norton <i class="fas fa-angle-right ml-2"></i></a>
         </div>
 
         <div class="product-btn">
@@ -313,8 +314,8 @@
 
         <div class="product-cta">
             <p><strong>ECCELENT</strong></p>
-            <a href="http://www.bullguard.com" data-idimp="664b47a990ab74ac42650f77ba706022" class="red-custom-button" event_category="landing_page" event_action="visit_site" event_label="bitdefender" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true"
-                title="" data-original-title="<div class='white-text '> Offerta speciale AntivirusGuide<br><b>60% </b> Sconto</div>">	Visita BullGuard <i class="fas fa-angle-right ml-2"></i></a>
+            <a href="http://www.bullguard.com" data-idimp="664b47a990ab74ac42650f77ba706022" class="red-custom-button stretched-link" event_category="landing_page" event_action="visit_site" event_label="bitdefender" target="_blank" data-toggle="tooltip" data-placement="top"
+                data-html="true" title="" data-original-title="<div class='white-text '> Offerta speciale AntivirusGuide<br><b>60% </b> Sconto</div>">	Visita BullGuard <i class="fas fa-angle-right ml-2"></i></a>
         </div>
 
         <div class="product-btn">
@@ -390,8 +391,8 @@
 
         <div class="product-cta">
             <p><strong>OTTIMO</strong></p>
-            <a href="http://www.mcafee.com" data-idimp="664b47a990ab74ac42650f77ba706022" class="red-custom-button" event_category="landing_page" event_action="visit_site" event_label="bitdefender" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true"
-                title="" data-original-title="<div class='white-text '> Offerta speciale AntivirusGuide<br><b>60% </b> Sconto</div>">	Visita McAfee <i class="fas fa-angle-right ml-2"></i></a>
+            <a href="http://www.mcafee.com" data-idimp="664b47a990ab74ac42650f77ba706022" class="red-custom-button stretched-link" event_category="landing_page" event_action="visit_site" event_label="bitdefender" target="_blank" data-toggle="tooltip" data-placement="top"
+                data-html="true" title="" data-original-title="<div class='white-text '> Offerta speciale AntivirusGuide<br><b>60% </b> Sconto</div>">	Visita McAfee <i class="fas fa-angle-right ml-2"></i></a>
         </div>
 
         <div class="product-btn">
@@ -467,8 +468,8 @@
 
         <div class="product-cta">
             <p><strong>OTTIMO</strong></p>
-            <a href="http://www.intego.com" data-idimp="664b47a990ab74ac42650f77ba706022" class="red-custom-button" event_category="landing_page" event_action="visit_site" event_label="bitdefender" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true"
-                title="" data-original-title="<div class='white-text '> Offerta speciale AntivirusGuide<br><b>60% </b> Sconto</div>"> Visita Intego <i class="fas fa-angle-right ml-2"></i></a>
+            <a href="http://www.intego.com" data-idimp="664b47a990ab74ac42650f77ba706022" class="red-custom-button stretched-link" event_category="landing_page" event_action="visit_site" event_label="bitdefender" target="_blank" data-toggle="tooltip" data-placement="top"
+                data-html="true" title="" data-original-title="<div class='white-text '> Offerta speciale AntivirusGuide<br><b>60% </b> Sconto</div>"> Visita Intego <i class="fas fa-angle-right ml-2"></i></a>
         </div>
 
         <div class="product-btn">
@@ -551,8 +552,8 @@
 
             <div class="product-cta">
                 <p><strong>OTTIMO</strong></p>
-                <a href="http://www.kyspersky.com" data-idimp="664b47a990ab74ac42650f77ba706022" class="red-custom-button" event_category="landing_page" event_action="visit_site" event_label="bitdefender" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true"
-                    title="" data-original-title="<div class='white-text '> Offerta speciale AntivirusGuide<br><b>60% </b> Sconto</div>">	Visita Kyspersky <i class="fas fa-angle-right ml-2"></i></a>
+                <a href="http://www.kyspersky.com" data-idimp="664b47a990ab74ac42650f77ba706022" class="red-custom-button stretched-link" event_category="landing_page" event_action="visit_site" event_label="bitdefender" target="_blank" data-toggle="tooltip" data-placement="top"
+                    data-html="true" title="" data-original-title="<div class='white-text '> Offerta speciale AntivirusGuide<br><b>60% </b> Sconto</div>">	Visita Kyspersky <i class="fas fa-angle-right ml-2"></i></a>
             </div>
 
             <div class="product-btn">
@@ -628,8 +629,8 @@
 
             <div class="product-cta">
                 <p><strong>VERY GOOD</strong></p>
-                <a href="http://www.eset.com" data-idimp="664b47a990ab74ac42650f77ba706022" class="red-custom-button" event_category="landing_page" event_action="visit_site" event_label="bitdefender" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true"
-                    title="" data-original-title="<div class='white-text '> Offerta speciale AntivirusGuide<br><b>60% </b> Sconto</div>">Visita ESET <i class="fas fa-angle-right ml-2"></i></a>
+                <a href="http://www.eset.com" data-idimp="664b47a990ab74ac42650f77ba706022" class="red-custom-button stretched-link" event_category="landing_page" event_action="visit_site" event_label="bitdefender" target="_blank" data-toggle="tooltip" data-placement="top"
+                    data-html="true" title="" data-original-title="<div class='white-text '> Offerta speciale AntivirusGuide<br><b>60% </b> Sconto</div>">Visita ESET <i class="fas fa-angle-right ml-2"></i></a>
             </div>
 
             <div class="product-btn">
@@ -705,8 +706,8 @@
 
             <div class="product-cta">
                 <p><strong>VERY GOOD</strong></p>
-                <a href="http://www.panda.com" data-idimp="664b47a990ab74ac42650f77ba706022" class="red-custom-button" event_category="landing_page" event_action="visit_site" event_label="bitdefender" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true"
-                    title="" data-original-title="<div class='white-text '> Offerta speciale AntivirusGuide<br><b>60% </b> Sconto</div>">	Visita Panda <i class="fas fa-angle-right ml-2"></i></a>
+                <a href="http://www.panda.com" data-idimp="664b47a990ab74ac42650f77ba706022" class="red-custom-button stretched-link" event_category="landing_page" event_action="visit_site" event_label="bitdefender" target="_blank" data-toggle="tooltip" data-placement="top"
+                    data-html="true" title="" data-original-title="<div class='white-text '> Offerta speciale AntivirusGuide<br><b>60% </b> Sconto</div>">	Visita Panda <i class="fas fa-angle-right ml-2"></i></a>
             </div>
 
             <div class="product-btn">
@@ -781,8 +782,8 @@
 
             <div class="product-cta">
                 <p><strong>VERY GOOD</strong></p>
-                <a href="http://www.avg.com" data-idimp="664b47a990ab74ac42650f77ba706022" class="red-custom-button" event_category="landing_page" event_action="visit_site" event_label="bitdefender" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true"
-                    title="" data-original-title="<div class='white-text '> Offerta speciale AntivirusGuide<br><b>60% </b> Sconto</div>">	Visita AVG <i class="fas fa-angle-right ml-2"></i></a>
+                <a href="http://www.avg.com" data-idimp="664b47a990ab74ac42650f77ba706022" class="red-custom-button stretched-link" event_category="landing_page" event_action="visit_site" event_label="bitdefender" target="_blank" data-toggle="tooltip" data-placement="top"
+                    data-html="true" title="" data-original-title="<div class='white-text '> Offerta speciale AntivirusGuide<br><b>60% </b> Sconto</div>">	Visita AVG <i class="fas fa-angle-right ml-2"></i></a>
             </div>
 
             <div class="product-btn">
@@ -857,8 +858,8 @@
 
             <div class="product-cta">
                 <p><strong>BUONO</strong></p>
-                <a href="http://www.norton.com" data-idimp="664b47a990ab74ac42650f77ba706022" class="red-custom-button" event_category="landing_page" event_action="visit_site" event_label="bitdefender" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true"
-                    title="" data-original-title="<div class='white-text '> Offerta speciale AntivirusGuide<br><b>60% </b> Sconto</div>">	Visita Avira <i class="fas fa-angle-right ml-2"></i></a>
+                <a href="http://www.norton.com" data-idimp="664b47a990ab74ac42650f77ba706022" class="red-custom-button stretched-link" event_category="landing_page" event_action="visit_site" event_label="bitdefender" target="_blank" data-toggle="tooltip" data-placement="top"
+                    data-html="true" title="" data-original-title="<div class='white-text '> Offerta speciale AntivirusGuide<br><b>60% </b> Sconto</div>">	Visita Avira <i class="fas fa-angle-right ml-2"></i></a>
             </div>
 
             <div class="product-btn">
@@ -1211,11 +1212,11 @@
                 </tr>
                 <tr>
                     <th scope="row" class="track"></th>
-                    <td><button class="btn-danger">Visitare il sito</button></td>
-                    <td><button class="btn-danger">Visitare il sito</button></td>
-                    <td><button class="btn-danger">Visitare il sito</button></td>
-                    <td><button class="btn-danger">Visitare il sito</button></td>
-                    <td><button class="btn-danger">Visitare il sito</button></td>
+                    <td><button class="btn table-button">Visitare il sito</button></td>
+                    <td><button class="btn table-button">Visitare il sito</button></td>
+                    <td><button class="btn table-button">Visitare il sito</button></td>
+                    <td><button class="btn table-button">Visitare il sito</button></td>
+                    <td><button class="btn table-button" style="width: 130px;">Visitare il sito</button></td>
                 </tr>
         </div>
         </tbody>
@@ -1250,7 +1251,7 @@
 
     <div class="container-fluid mt-5 pt-3 " id="article2">
         <div class="container-lg article">
-            <h4 class="article-heading mb-4 ">Trovate il miglior antivirus </h4>
+            <h2 class="h2-responsive font-weight-bold mb-4">Trovate il miglior antivirus </h2>
             <div class="article2-content">
                 <img class="image-fluid article2-image" src="assets/allImages/article2.jpg " alt="Article2 ">
                 <p class="article2-paragraph1"> Abbiamo passato ore a cercare i migliori laboratori per testare gli antivirus ed abbiamo elencato tutte le informazioni che siamo riusciti a reperire riguardo alla rilevazione di virus e malware. AV Comparatives e AV Test si sono rivelate
@@ -1266,9 +1267,10 @@
     </div>
 
 
-    <div class="container-fluid mt-5 " id="article3 ">
+    <div class="container-fluid mt-5" id="article3">
         <div class="container-lg article">
-            <h4 class="article-heading ">Il giusto prezzo </h4>
+            <h2 class="h2-responsive font-weight-bold mb-4">Il giusto prezzo
+            </h2>
             <div class="article3-content">
                 <img class="img-fluid article3-image" src="assets/allImages/article3.jpg ">
                 <p class="article3-paragraph1">
@@ -1286,8 +1288,8 @@
     </div>
 
     <div class="jumbotron jumbotron-fluid ">
-        <div class="container ">
-            <h1 class="jumbotron-heading text-center ">Dichiarazione sulla trasparenza</h1>
+        <div class="container-lg">
+            <h1 class="jumbotron-heading text-left ">Dichiarazione sulla trasparenza</h1>
 
             <p><small>Le recensioni, la classificazione e i contenuti presentati su AntivirusGuide.com rappresentano l'opinione informata dei nostri recensori e sono indicati per aiutare i visitatori a prendere la decisione d'acquisto corretta. 
         La nostra azienda riceve una compensazione monetaria quando gli utenti acquistano i prodotti che raccomandiamo cliccando sui link (contenuti sponsorizzati) presenti su AntivirusGuide. Il nostro team editoriale si impegna al massimo per fornire informazioni accurate indipendentemente dal compenso monetario ricevuto dai link di affiliazione.</small></p>
@@ -1295,18 +1297,15 @@
     </div>
     <div class="container-fluid text-center pb-5" id="footer ">
         <p>La fonte attendibile di recensioni di software antivirus <br> Orgogliosamente sviluppato da Signivis</p>
-        <div class="footer-copyright"> <strong>© 2020 Diritto d'autore: AntivirusGuide.com</strong> </div>
+        <div class="footer-copyright">© 2020 Diritto d'autore: AntivirusGuide.com </div>
     </div>
     </div>
 
     <!--Main Wrapper Ends-->
-
-
     <script src="js/hideLink.js "></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js " integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj " crossorigin="anonymous "></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js " integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN " crossorigin="anonymous "></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js " integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s " crossorigin="anonymous "></script>
-
 </body>
 
 </html>
